Prevent QR scanner color inversion in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -41,4 +41,8 @@
   img {
     @apply dark-no-invert;
   }
+
+  video {
+    @apply dark-no-invert;
+  }
 }
